<resources>
    <string name="app_name">Social Media Integration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="please_log_in_to_continue">Please log-in to continue</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_header">app header</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="profile_picture">profile picture</string>

    <string name="facebook_app_id">376517311444976</string>
    <string name="fb_login_protocol_scheme">f3765173114449764</string>
    <string name="facebook_client_token">56789</string>
    <string name="social_media_image">social media image</string>
    <string name="designed_by_debangshu_chandra">Designed by Debangshu Chandra</string>


</resources>